<resources>
    <string name="app_name">M News</string>
    <string name="all_home">Home</string>
    <string name="all_categories">Categories</string>
    <string name="all_bookmarks">Bookmarks</string>
    <string name="all_videos">Videos</string>
    <string name="home_viewAll">View All</string>
    <string name="home_latestNews">Latest News</string>
    <string name="home_searchHint">Search Here…</string>
    <string name="all_unknownError">Unknown Error</string>
    <string name="category_topStories">Top Stories</string>
    <string name="category_World">World</string>
    <string name="category_business">Business</string>
    <string name="category_iran">Iran</string>
    <string name="category_health">Health</string>
    <string name="category_technology">Technology</string>

    <string name="bookmark_addNewBookmark">There is no bookmarked News, Start Now!</string>


    <string name="setting_Title">Settings</string>
    <string name="setting_selectlocaleMessage">Select Application Default Language</string>
    <string name="setting_restartMessage">please restart application for changing language</string>

</resources>
