<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.SettingActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <ImageView
                android:id="@+id/iv_setting_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_arrow_back_white_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/iv_setting_back"
                android:text="@string/setting_Title"
                android:textColor="@android:color/white"
                android:textSize="@dimen/all_toolbarTitleTextSize" />
        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>

    <RadioGroup
        android:id="@+id/radioGroup_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/setting_selectlocaleMessage" />

        <RadioButton
            android:id="@+id/radio_setting_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="English" />

        <RadioButton
            android:id="@+id/radio_setting_persian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="فارسی" />

        <TextView
            android:id="@+id/tv_setting_restartMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:text="@string/setting_restartMessage"
            android:textColor="@color/colorAccent" />
    </RadioGroup>

</android.support.design.widget.CoordinatorLayout>